Expermiments and results

--- a/documentation/final/experiments.tex
+++ b/documentation/final/experiments.tex
@@ -99,7 +99,7 @@ Replay Memory Size & $2^16$ & $2^16$  & $2^16$  & $2^16$  \\
 
 \subsection{ Model Evaluation}
 
-All aforementioned models are evaluated for 100 episodes after 450 episodes. 
+All aforementioned models are evaluated for 100 episodes for a fixed weights.
 
 \begin{figure}[!ht]
 %\begin{figure}%
