--- a/documentation/final/experiments.tex
+++ b/documentation/final/experiments.tex
@@ -48,7 +48,7 @@ Dueling DQN & $225$ & $435$ \\
 \subsection{ Hyperparameter  Tuning}
 -We tested with different learning rate of 0.01, 0.002, 0.005 and 0.001. We noticed our model gave best result with 0.001\\
 -We also tried different epsilon decay and got the best results at 0.995\\
--We tried various combinations of batchsize(32, 64 & 128). Of all combinations, we saw best score with batch size of 64 across all models. \\
+-We tried various combinations of batchsize(32, 64 and 128). Of all combinations, we saw best score with batch size of 64 across all models. \\
 
 \begin{figure}[!ht]
 %\begin{figure}%
