--- a/documentation/final/task_definition.tex
+++ b/documentation/final/task_definition.tex
@@ -1,10 +1,12 @@
 \section{Task Definition}
 \label{intro}
 
-The task accomplished by this project is to build an AI agent which would land with constant high rewards on a landing pad, defined by Box2D Lunar Lander available on OpenAI gym. This is accomplished by Reinforcement Learning, particularly by applying different Deep Q-learning techniques. This project has explored Full DQN, Double DQN and Dueling DQN, to solve the game. We have considered the game as solved when the agent starts getting average reward of 200 over 100 consecutive episodes. Moreover, performances of the agent is also been compared with baselines and oracle. \\
+The task accomplished by this project is to build an AI agent for the game of Lunar Lander defined by openAI gym in Box2D format. Here, a lunar lander needs to land with zero velocity between the flags on a landing pad as shown in the figure. with a constant high reward. This is accomplished by Reinforcement Learning, particularly by applying different Deep Q-learning techniques. This project has explored Full DQN, Double DQN, and Dueling DQN, to solve the game. We have considered the game as solved when the agent starts getting an average reward of 200 over 100 consecutive episodes. Moreover, performances of different DQN variants are compared with baselines and oracle. \\
 
-Since this problem involves high dimension and continuous state
-space, standard Q-learning cannot solve this problem unless some amount of discretization is done. Due to above mentioned difficulties, Deep Q-Network (DQN) was the choice. We plan to explore different variants of DQN (particularly DQN , Double DQN, and
+\includegraphics[scale=1.0,width=1.0\columnwidth]{figures/game.png}%
+
+Since this problem involves high dimensional and continuous state
+space, standard Q-learning cannot solve this problem unless some amount of discretization is done. Due to above-mentioned difficulties, Deep Q-Network (DQN) was the choice. We plan to explore different variants of DQN (particularly DQN, Double DQN, and
 Dueling network architecture).
 
 
