--- a/documentation/final/biblio.bib
+++ b/documentation/final/biblio.bib
@@ -68,6 +68,34 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@article{Continuos,
+  author    = {Allan Reyes},
+  title     = {Lunar Lander by Allan Reyes},
+  journal   = {},
+  volume    = {},
+  year      = {},
+  url       = {https://allan.reyes.sh/projects/gt-rl-lunar-lander},
+  archivePrefix = {},
+  eprint    = {},
+  timestamp = {},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/LillicrapHPHETS15},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Continuos,
+  author    = {Jaromir Janisch},
+  title     = {Lets make a DQN},
+  journal   = {},
+  volume    = {},
+  year      = {},
+  url       = {https://jaromiru.com/2016/09/27/lets-make-a-dqn-theory},
+  archivePrefix = {},
+  eprint    = {},
+  timestamp = {},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/LillicrapHPHETS15},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 [10] D. Kingma and J. Ba. Adam: A method for stochastic opti-
 mization. arXiv preprint arXiv:1412.6980, 2014.
 
