--- a/documentation/final/experiments.tex
+++ b/documentation/final/experiments.tex
@@ -9,19 +9,45 @@ The second baseline is a simple linear classifier.
 
 We defined our oracle to be human playing score and the leaderboard scores. In order to create a simulation where humans could actually play the game and collect data, we used openai gym's implementation code. We recorded observations for the same after playing the game 10 times each. \\
 
+\label{sec:exp}
+\begin{table}%
+\centering
+\begin{tabular}{|l|c|c|c|}
+\hline
+Iteration & Prabhjot & Abhishek & Amey   \\
+\hline
+1 & $180$ & $80$ & $-90$  \\
+\hline
+2 & $200$ & $100$ & $170$  \\
+\hline
+3 & $-10$ & $-90$ & $180$  \\
+\hline
+4 & $150$ & $-90$ & $160$  \\
+\hline
+5 & $20$ & $180$ & $30$  \\
+\hline
+6 & $10$  & $120$ & $20$ \\
+\hline
+7 & $120$  & $60$ & $150$ \\
+\hline
+8 & $130$ & $200$ & $-100$   \\
+\hline
+9 & $-90$& $210$ & $90$   \\
+\hline
+10 & $-80$ & $-80$ & $30$  \\
+\hline
+AVG & $63$& $69$ & $82$   \\
+\hline
+\end{tabular}
+\caption{Manual Oracle Scores}
+\label{tab:accuracy}
+\end{table}
 We also compared our results with the ones on OpenAI Gym Leaderboard Wiki.
 
-We found an implementation online running which we could play 
-
-// describe oracle (FIXME)
-
-// describe basic framework for rl learning (FIXME)
-
-// describe all three learning algorithms (FIXME)
 
 \subsection{Literature Review}
 
-Since the game of Lunar Lander is available on openAI gym platform, we came across various implementations of it online. We also found a wiki-driven leaderboard is available for a small amount of comparative benchmarks. [FIXME add ref]. We found [FIXME Allan Reyes ref] work to be well documented. Here the AI agent was trained using simple DQN. We started with the same approach of simple DQN, and after experimenting with hyperparameters we could achieve better results [FIXME mention results]. Later two more algorithms Double DQN and Duel DQN further enhanced the results. So far stand 2nd place on the leaderboard. 
+Since the game of Lunar Lander is available on openAI gym platform, we came across various implementations of it online. We also found a wiki-driven leaderboard is available for a small amount of comparative benchmarks. [FIXME add ref]. We found [FIXME Allan Reyes ref] work to be well documented. Here the AI agent was trained using simple DQN. We started with the same approach of simple DQN, and after experimenting with hyperparameters we could achieve better results of getting reward of 200 within 525 episodes. Later two more algorithms Double DQN and Duel DQN further enhanced the results. So far stand 2nd place on the leaderboard. [FIXME ref]
 
 \subsection{ Training}
 In the most proposed models an initial learning rate of $10^{-4}$ was used to initialize training. Adam Optimizer is used for full duration of number of episodes. All models can be trained within 30-40 mins on CPU as input to the neural network is a state vector. All the models were trained for 800 episodes with batch size of 32 or 64. The number of episodes was choosen based on covergence of the loss, while batch size was choosen to be relatively small to get the benefits of stochasticity. We tried different epsilon decay rates to get the best results.
@@ -89,7 +115,7 @@ However for some episodes after 435 the rewards were not consistently more than 
 %\vspace*{\fill}
 \centering
 \includegraphics[scale=0.75,width=0.75\columnwidth]{figures/Histogram.png}%
-\caption{ Histogram (FIXME)}%
+\caption{ Histogram Distribution of 100 scores after exploration ($\epsilon$) is set to 0}%
 \label{fig:Visualization}%
 \end{figure}
 %\vfill}
