--- a/documentation/final/final_abhishek.tex
+++ b/documentation/final/final_abhishek.tex
@@ -47,15 +47,15 @@
 \input{task_definition}
 \input{infrastructure}
 \input{approach}
-
 \input{experiments}
 \input{conclusion}
 \input{codalab}
 \pagestyle{plain}
 \bibliographystyle{abbrv}
 \newpage
+%\bibliography{biblio}
 \bibliography{biblio}
-
+\bibliographystyle{abbrv}
 %\input{contribution}
 
 \end{document}
